--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "bootstrap": "^4.5.2"
+    "bootstrap": "^5.3.1",
+    "animate.css": "^4.1.1",
+    "bootstrap-icons": "^1.10.5"
   },
   "devDependencies": {
-    "sass": "^1.26.10"
+    "@vitejs/plugin-legacy": "^4.1.1",
+    "sass": "^1.64.1",
+    "vite": "^4.4.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
